[package]
name = "project_main"
version = "0.1.0"
authors = ["Espen <espen_bh@hotmail.com\n\ngit config --global user.name Espen\n\n\ngit config --global user.email espen_bh@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
