[package]
name = "project_main"
version = "0.1.0"
authors = ["Agnethe <agnethka@stud.ntnu.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5"

[lib]
name = "lib_elevator_driver"
path = "lib_elevator_driver/src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"
